seperated add transaction in different file

--- a/ExpenseTracker/ExpenseTracker.csproj
+++ b/ExpenseTracker/ExpenseTracker.csproj
@@ -58,11 +58,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Components\Pages\AddTransaction.razor.css" />
       <None Remove="Components\Pages\Debt.razor.css" />
       <None Remove="Components\Pages\Tags.razor.css" />
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Components\Pages\AddTransaction.razor.css" />
       <Content Include="Components\Pages\Debt.razor.css" />
       <Content Include="Components\Pages\Tags.razor.css" />
     </ItemGroup>
